--- a/index.html
+++ b/index.html
@@ -1,6 +1,10 @@
 <html>
   <head>
-    
+    <style>
+      *{
+      background: green;
+      }
+    </style>
   </head>
   <body>
     This is a demo page.
