--- a/index.html
+++ b/index.html
@@ -1,8 +1,7 @@
 <html>
     <head>
         <title>Test Page</title>
-        <!-- <link rel="stylesheet" href="style.css" /> -->
-        <style>
+       !-- <style>
             * {
                 background: linear-gradient(45, red, black);
                 color: white;
@@ -14,7 +13,7 @@
                 margin: auto;
                 padding: 45vh;
             }
-        </style>
+        </style> --!
     </head>
     <body>
         <div class="b1">This is the test page of Siam.</div>
