--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>Test Page</title>
+        <title>Test Page 2</title>
        !-- <style>
             * {
                 background: linear-gradient(45, red, black);
