my first commit

--- a/index.html
+++ b/index.html
@@ -1,12 +1,10 @@
-<html>
-  <head>
-    <style>
-      *{
-      background: green;
-      }
-    </style>
-  </head>
-  <body>
-    This is a demo page.
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <title>Test Page</title>
+        <link rel="stylesheet" href="index.css" />
+    </head>
     <body>
-  </html>
+        <div class="b1">This is the test page of Siam.</div>
+    </body>
+</html>
