--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <title>Test Page</title>
-        <link rel="stylesheet" href="index.css" />
+        <link rel="stylesheet" href="style.css" />
     </head>
     <body>
         <div class="b1">This is the test page of Siam.</div>
