--- a/index.html
+++ b/index.html
@@ -1,8 +1,20 @@
-<!DOCTYPE html>
-<html lang="en">
+<html>
     <head>
         <title>Test Page</title>
-        <link rel="stylesheet" href="style.css" />
+        <!-- <link rel="stylesheet" href="style.css" /> -->
+        <style>
+            * {
+                background: linear-gradient(45, red, black);
+                color: white;
+                text-align: center;
+            }
+
+            .b1 {
+                width: 50%;
+                margin: auto;
+                padding: 45vh;
+            }
+        </style>
     </head>
     <body>
         <div class="b1">This is the test page of Siam.</div>
